[package]
name = "pills"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
nanoid = "0.4.0"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
