[package]
edition = "2021"
name = "pills"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
